unhidden login info

--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "0      ad  aixas      Aixàs      6         NaN  42.483333   1.466667"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "3173958"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "3173958"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x7f7580c10c88>\n"
+      "<mysql.connector.connection.MySQLConnection object at 0x7f436118ba58>\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
@@ -327,7 +327,7 @@
      "output_type": "stream",
      "text": [
       "1000\n",
-      "45.498794\n"
+      "46.493992\n"
      ]
     }
    ],
@@ -346,10 +346,14 @@
     "        #print(city_name)\n",
     "        #print(city_long)\n",
     "        #print(city_lat)\n",
-    "        sql = \"\\nINSERT INTO examdb.cities (name, location) VALUES ('{}', ST_GeomFromText('POINT({} {})'));\".format(city_name, city_long, city_lat)\n",
-    "        large_sql += sql\n",
-    "        #print(sql)\n",
-    "        mycursor.execute(sql)\n",
+    "        sql = \"INSERT INTO examdb.cities (name, location) VALUES ('%s', Point(%s, %s));\"\n",
+    "        #sql = \"INSERT INTO authors (name) VALUES ('bob');\"\n",
+    "        #large_sql += sql\n",
+    "        \n",
+    "        insert_values = (city_name, city_long, city_lat)\n",
+    "        \n",
+    "        #print(sql % insert_values)\n",
+    "        mycursor.execute(sql % insert_values)\n",
     "        #print(mycursor.lastrowid)\n",
     "        \n",
     "        if (counter >= interval_counter + interval):\n",
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -388,13 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "con.close()\n",
     "mycursor.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
