updated remote connect

--- a/remote_db_connect.ipynb
+++ b/remote_db_connect.ipynb
@@ -334,8 +334,7 @@
    ],
    "source": [
     "con = mysql.connector.connect(\n",
-    "    host=\"139.59.140.52\",\n",
-    "    #host=\"localhost\",\n",
+    "    host=\"localhost\",\n",
     "    user=\"dbexamuser\",\n",
     "    database=\"examdb\",\n",
     "    passwd=\"dbExam.group7\",\n",
