--- a/remote_db_connect.ipynb
+++ b/remote_db_connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "import datetime\n",
     "from city import City\n",
     "import mysql.connector\n",
-    "from mysql.connector.cursor import MySQLCursorPrepared"
+    "from mysql.connector.cursor import MySQLCursorPrepared\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +209,7 @@
        "399     Australia/Perth  2015-06-29  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
        "0  2008-10-15  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "con created\n",
-      "<mysql.connector.connection.MySQLConnection object at 0x7f9ecece3ac8>\n"
+      "<mysql.connector.connection.MySQLConnection object at 0x7f3162e0da58>\n"
      ]
     }
    ],
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +380,7 @@
       "22000\n",
       "23000\n",
       "24000\n",
-      "1534.31296\n"
+      "8.964561\n"
      ]
     }
    ],
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +458,145 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-47-0ab898e02438>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-0ab898e02438>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    insert_values[(bookid, city) for city in book[\"city_names\"]]\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "book = {\n",
+    "    \"title\":\"tile\", \n",
+    "    \"author\":\"auhor\",\n",
+    "    \"city_names\":[\"London\",\"Paris\",\"Berlin\"],\n",
+    "}\n",
+    "book[\"title\"]\n",
+    "insert_values[(bookid, city) for city in book[\"city_names\"]]\n",
+    "insert_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mysql.connector.connection.MySQLConnection object at 0x7fe330f35e80>\n"
+     ]
+    }
+   ],
+   "source": [
+    "con = mysql.connector.connect(\n",
+    "    host=\"localhost\",\n",
+    "    user=\"dbexamuser\",\n",
+    "    database=\"examdb\",\n",
+    "    passwd=\"dbExam.group7\",\n",
+    "    use_pure=True,\n",
+    ")\n",
+    "con.autocommit = False\n",
+    "mycursor = con.cursor(cursor_class=MySQLCursorPrepared)\n",
+    "print(con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "0.002856\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "sql = \"call insert_book(%s, %s);\"\n",
+    "\n",
+    "insert_values = (book[\"title\"], book[\"author\"])\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "mycursor.execute(sql, insert_values)\n",
+    "\n",
+    "bookid = mycursor.fetchone()[0]\n",
+    "\n",
+    "\n",
+    "con.commit()\n",
+    "\n",
+    "time_diff = datetime.datetime.now() - now\n",
+    "print(time_diff.total_seconds())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()\n",
+    "mycursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(bookid)"
+   ]
   }
  ],
  "metadata": {
