--- a/remote_db_connect.ipynb
+++ b/remote_db_connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "399     Australia/Perth  2015-06-29  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "0  2008-10-15  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "con created\n",
-      "<mysql.connector.connection.MySQLConnection object at 0x7f3162e0da58>\n"
+      "<mysql.connector.connection.MySQLConnection object at 0x7f04b4594d30>\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
       "22000\n",
       "23000\n",
       "24000\n",
-      "8.964561\n"
+      "10.518563\n"
      ]
     }
    ],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
