--- a/load_cities_to_db.ipynb
+++ b/load_cities_to_db.ipynb
@@ -2,19 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os import listdir\n",
-    "import re\n",
-    "import chardet\n",
     "import pandas as pd\n",
     "import datetime\n",
-    "from city import City\n",
     "import mysql.connector\n",
-    "from mysql.connector.cursor import MySQLCursorPrepared\n",
-    "import json"
+    "from mysql.connector.cursor import MySQLCursorPrepared"
    ]
   },
   {
@@ -122,139 +117,6 @@
     "con.close()\n",
     "mycursor.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tile'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "book = {\n",
-    "    \"title\":\"tile\", \n",
-    "    \"author\":\"auhor\",\n",
-    "    \"city_names\":[\"London\",\"Paris\",\"Berlin\"],\n",
-    "}\n",
-    "book[\"title\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x7fe330f35e80>\n"
-     ]
-    }
-   ],
-   "source": [
-    "con = mysql.connector.connect(\n",
-    "    host=\"localhost\",\n",
-    "    user=\"dbexamuser\",\n",
-    "    database=\"examdb\",\n",
-    "    passwd=\"dbExam.group7\",\n",
-    "    use_pure=True,\n",
-    ")\n",
-    "con.autocommit = False\n",
-    "mycursor = con.cursor(cursor_class=MySQLCursorPrepared)\n",
-    "print(con)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "0.002856\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "sql = \"call insert_book(%s, %s);\"\n",
-    "\n",
-    "insert_values = (book[\"title\"], book[\"author\"])\n",
-    "\n",
-    "now = datetime.datetime.now()\n",
-    "\n",
-    "mycursor.execute(sql, insert_values)\n",
-    "\n",
-    "bookid = mycursor.fetchone()[0]\n",
-    "\n",
-    "\n",
-    "con.commit()\n",
-    "\n",
-    "time_diff = datetime.datetime.now() - now\n",
-    "print(time_diff.total_seconds())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "con.close()\n",
-    "mycursor.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
